--- a/_posts/2016-01-01-second-entry.adoc
+++ b/_posts/2016-01-01-second-entry.adoc
@@ -1,12 +1,12 @@
-= First Entry
+= Second Entry
 :showtitle:
-:page-navtitle: First Entry
+:page-navtitle: Second Entry
 :page-excerpt: Excerpt goes here.
 :page-root: ../../../
 
 == Example entry
 
-Lorem ipsum dolor sit amet, et elitr docendi officiis vix. An has impedit concludaturque, an vim dicam feugiat nominavi. Veniam oblique menandri sea ea, agam novum appareat in his. Constituto posidonium te his. Pri quot iudico ex, noster apeirian concludaturque mel cu.
+Lorem ipswxcvwxcv sit amet, et elitr docendi officiis vix. An has impedit concludaturque, an vim dicam feugiat nominavi. Veniam oblique menandri sea ea, agam novum appareat in his. Constituto posidonium te his. Pri quot iudico ex, noster apeirian concludaturque mel cu.
 
 Ocurreret salutatus scribentur ne est, quo nostrud scriptorem ex, vis ea cetero labores delicatissimi. Quis viris nullam ea pri, vim solum lobortis eu. Augue intellegat interpretaris eum ei. Ludus integre id qui, cu ludus partiendo interpretaris cum. At cibo mentitum his, ei vero accusamus qui. At ius iudico postea platonem, no vim efficiendi efficiantur, ea mea reprimique percipitur liberavisse.
 
