--- a/_posts/2018-10-26-exemples-applications-downlink.adoc
+++ b/_posts/2018-10-26-exemples-applications-downlink.adoc
@@ -1,6 +1,7 @@
+= Projet : envoyer des données au _device_
 :showtitle:
 :page-navtitle: Lorawan Entry
-= Projet : envoyer des données au _device_
+:page-root: ../../../
 
 [TIP]
 .Objectif
